--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "lint": "eslint --ext js,jsx,ts,tsx --fix"
   },
   "dependencies": {
+    "@fontsource/inter": "^4.4.5",
     "next": "10.2.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
