--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "type-check": "tsc --project tsconfig.json --pretty --noEmit",
-    "lint": "eslint --ext js,jsx,ts,tsx --fix"
+    "lint": "next lint"
   },
   "dependencies": {
     "@fontsource/inter": "^4.5.7",
@@ -20,19 +19,16 @@
   "devDependencies": {
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
+    "@next/eslint-plugin-next": "^12.1.5",
     "@tailwindcss/forms": "^0.5.0",
     "@types/node": "^17.0.23",
     "@types/react": "^18.0.1",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "autoprefixer": "^10.4.4",
-    "eslint": "^8.13.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.4.0",
     "husky": "^7.0.4",
+    "eslint": "8.13.0",
+    "eslint-config-next": "12.1.4",
     "lint-staged": "^12.3.7",
     "postcss": "^8.4.12",
     "prettier": "2.6.2",
